Testing, instantiating now uses constructor better